# psautohint

./: .appveyor.yml  .clang-format  .coverage  .coveragerc  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  COPYING  MANIFEST.in  Makefile  NEWS.md  README.md  README.rst  config.sh  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-mm.py  tox.ini
.github/workflows/: build_wheels.yml  codeql.yml  coverage.yml  pythonpackage.yml  run_tests.yml
.github/workflows_disabled/: build_wheels.yml  run_tests.yml
autohintlib/: Makefile
doc/: AC.md  NOTES.md  VariableGlyphNotes.md  bezfileformat.txt  bezformat.md
doc/historical/: AC.md
libpsautohint/: .lvimrc  Makefile  Makefile.am  autohintexe.c  configure.ac  meson.build  psautohint.pc.in
libpsautohint/include/: ac_C_lib.h  psautohint.h
libpsautohint/psautohintexe/libpsautohint/libpsautohint.xcodeproj/: project.pbxproj
libpsautohint/psautohintexe/psautohintexe.xcodeproj/: project.pbxproj
libpsautohint/src/: ac.c  ac.h  ac_C_lib.c  acfixed.c  auto.c  basic.h  bbox.c  bbox.h  buffer.c  charpath.c  charpath.h  charpathpriv.c  charprop.c  check.c  control.c  eval.c  fix.c  flat.c  fontinfo.c  fontinfo.h  gen.c  head.c  logging.c  logging.h  memory.c  memory.h  merge.c  misc.c  opcodes.h  optable.c  optable.h  pick.c  psautohint.c  read.c  report.c  shuffle.c  stemreport.c  version.h.in  write.c
public/config/linux/gcc/: gcc.mak
python/: .lvimrc  BezTools.py  ConvertFontToCID.py  FDKUtils.py  autohint.py  ufoTools.py
python/psautohint/: BezTools.py  ConvertFontToCID.py  FDKUtils.py  __init__.py  __main__.py  _psautohint.c  _version.py  autohint.py  fdTools.py  glyphData.py  hint_region_glyphs.py  hinter.py  hintstate.py  logging.py  otfFont.py  psautohint.py  report.py  splitpsdicts.py  ufoFont.py  ufoTools.py
source/: Makefile  _psautohint.c  main.c  psautohintmodule.c
source/ac/: ac.c  ac.h  ac_C_lib.c  acfixed.c  atan.c  auto.c  bbox.c  bfstub.c  charpath.c  charpath.h  charprop.c  check.c  control.c  cswrite.c  enum.c  eval.c  fix.c  flat.c  fontinfo.c  fontinfo.h  gen.c  head.c  logging.c  memory.c  memory.h  merge.c  misc.c  path.c  pick.c  read.c  report.c  shuffle.c  stemreport.c  stub.c  timecheck.c  write.c
source/actest/: AC_C_libtest.c
source/bf/: basic.h  bftoac.h  buildfont.h  charlist.c  charlist.h  charlistpriv.c  charlistpriv.h  charpath.c  charpath.h  charpathpriv.c  chartable.h  cryptdefs.h  cryptprocs.c  derivedchars.h  fileops.c  filookup.c  filookup.h  fipriv.h  fipublic.h  hintfile.h  illtobez.c  logging.c  logging.h  machinedep.c  machinedep.h  masterfont.h  memory.c  memory.h  opcodes.h  optable.c  optable.h  rawPStobez.c  transitionalchars.h
source/include/: ac_C_lib.h
source/include/ac/: ac_C_lib.h  memcheck.h
source/include/extras/: numtypes.h  pubtypes.h
source/include/winextras/: dir.h  file.h  stdtypes.h  unistd.h
tests/: .coveragerc  Makefile  __init__.py  test_cli.py  test_hintfonts.py  test_hintfontsmm.py
tests/data/source-code-pro/Black/font.ufo/glyphs.com.adobe.type.processedGlyphs/: circledotted.glif  contents.plist  fi.glif  fl.glif  g.sups.glif  koppa.glif  percent.glif  perthousand.glif  six.sups.glif
tests/data/source-code-pro/BlackIt/font.ufo/glyphs.com.adobe.type.processedGlyphs/: circledotted.glif  g.supa.glif  hsmall.glif  mu.math.glif  onetenth.glif  parenright.glif  percent.glif  perthousand.glif  quotedblbase.glif  quotesinglbase.glif  seveneighths.glif  tugrik.glif
tests/data/source-code-pro/Bold/font.ufo/glyphs.com.adobe.type.processedGlyphs/: Q_.glif  U_acutedblcyr.glif  U_cyr.glif  U_macroncyr.glif  U_short.glif  asperacute.cap.glif  aspergrave.cap.glif  bstroke.glif  clickalveolar.glif  comma.dnom.glif  dcroat.glif  dezh.glif  dje.glif  ef.glif  fi.glif  fl.glif  fourfifths.glif  g.glif  gacute.glif  gbreve.glif  gcaron.glif  gcircumflex.glif  gcommaaccent.glif  gdotaccent.glif  gmacron.glif  gtilde.glif  hbar.glif  interrobang.glif  interrobangdown.glif  percent.glif  perthousand.glif  philatin.glif  sampi.glif  threefifths.glif  tshe.glif  twofifths.glif  twothirds.glif  uhorn.glif  uhornacute.glif  uhorndotbelow.glif  (+3 more)
tests/integration/: XXX_mmhint.py  __init__.py  differ.py  test_cli.py  test_hint.py  test_mmhint.py  test_stemhist.py  test_ufo.py
tests/unittests/: __init__.py  test_extension.py  test_fdtools.py  test_hint.py
tests/unittests/data/hinted/basic_shapes.bez/: circle.bez  circle2.bez  square.bez  square2.bez  triangle.bez
tests/unittests/data/unhinted/basic_shapes.bez/: .notdef.bez  circle.bez  circle2.bez  fontinfo  square.bez  square2.bez  triangle.bez
tests/unittests/data/unhinted/basic_shapes.ufo/: lib.plist
util/: dump-font.py  launch-asan.sh
(+469 files in other folders)
