[sdist]
formats = zip

[metadata]
license_file = LICENSE

[flake8]
select = E,F,W
ignore =
    W504,
    W503,  # temporary -- fix setup.py
    E126,  # temporary -- fix setup.py
    E225,  # temporary -- fix otfFont.py
    E226,  # temporary -- fix otfFont.py
    E241,  # temporary -- fix test_cli.py
    E121,  # temporary -- fix test_extension.py
exclude = 
    .eggs,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    multibuild,
